@@ -6,6 +6,7 @@ SVN
 -bug#0001816: Cannot export graph data to CSV with IE 8 (8.0.7600.16385) 
 -bug:         accept "Connection refused" on TCP ping tests
 -bug:         correct grep'ing of icmp[s|r]eq required for newer linux versions (e.g. Fedora 14)
+-bug:         add missing row selection to graph preview
 -bug#0001504: no newline fix
 -bug#0001880: When Performing Form Validation Error Message Areas Not Highlighted Upon Form Save
 
